--- a/fly.toml
+++ b/fly.toml
@@ -4,7 +4,7 @@
 #
 
 app = 'email-poc'
-primary_region = 'cdg'
+primary_region = 'jnb'
 console_command = '/rails/bin/rails console'
 
 [build]
@@ -22,3 +22,7 @@ console_command = '/rails/bin/rails console'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
+
+[env]
+  LOG_LEVEL = 'debug'
+  RAILS_ENV = 'production'
