--- a/fly.toml
+++ b/fly.toml
@@ -9,6 +9,9 @@ console_command = '/rails/bin/rails console'
 
 [build]
 
+[deploy]
+  release_command = "bin/rails db:prepare"
+
 [http_service]
   internal_port = 8080
   force_https = true
@@ -18,10 +21,9 @@ console_command = '/rails/bin/rails console'
   processes = ['app']
 
 [[vm]]
-  memory = '1gb'
+  memory = '2gb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
 
 [env]
   LOG_LEVEL = 'debug'
