--- a/config/database.yml
+++ b/config/database.yml
@@ -31,3 +31,12 @@ test:
 production:
   primary:
     url: <%= ENV.fetch("DATABASE_URL") %>
+  cache:
+    url: <%= ENV.fetch("DATABASE_URL") %>
+    migrations_paths: db/cache_migrate
+  queue:
+    url: <%= ENV.fetch("DATABASE_URL") %>
+    migrations_paths: db/queue_migrate
+  cable:
+    url: <%= ENV.fetch("DATABASE_URL") %>
+    migrations_paths: db/cable_migrate
